; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/extr_omap_fbdev.c_get_fb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/extr_omap_fbdev.c_get_fb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_fb_helper = type { i32 }
%struct.fb_info = type { %struct.drm_fb_helper*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@MODULE_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.drm_fb_helper* (%struct.fb_info*)* @get_fb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.drm_fb_helper* @get_fb(%struct.fb_info* %0) #0 {
  %2 = alloca %struct.drm_fb_helper*, align 8
  %3 = alloca %struct.fb_info*, align 8
  store %struct.fb_info* %0, %struct.fb_info** %3, align 8
  %4 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %5 = icmp ne %struct.fb_info* %4, null
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %8 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @MODULE_NAME, align 4
  %12 = call i64 @strcmp(i32 %10, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %6, %1
  store %struct.drm_fb_helper* null, %struct.drm_fb_helper** %2, align 8
  br label %19

15:                                               ; preds = %6
  %16 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %17 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %16, i32 0, i32 0
  %18 = load %struct.drm_fb_helper*, %struct.drm_fb_helper** %17, align 8
  store %struct.drm_fb_helper* %18, %struct.drm_fb_helper** %2, align 8
  br label %19

19:                                               ; preds = %15, %14
  %20 = load %struct.drm_fb_helper*, %struct.drm_fb_helper** %2, align 8
  ret %struct.drm_fb_helper* %20
}

declare dso_local i64 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
